--- a/about.html
+++ b/about.html
@@ -5,10 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>A Few Words About Me</title>
+  <title>I’m a Business Administration student specializing in Marketing at the University of Northern Colorado. I’m deeply interested in digital marketing, data-driven strategies, and optimizing user experiences. Currently, I’m enhancing my skills in web and digital analytics, where I enjoy transforming data into insights that drive smarter marketing decisions and improved user engagement.</title>
   <meta name="description" content="This page is an overview of my professional and personal interests" >
-  <meta name="keywords" content="your name, about me" >
-
+  <meta name="keywords" content="your name, about me" > 
   <!-- Favicons -->
   <link href="assets/img/cat-favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
