--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,7 @@
 
     <!-- ======= Blog Section ======= -->
     <div class="header">
-      <h2>Your Name's Blog</h2>
+      <h2>Mindset Marketing</h2>
     </div>
     
     <div class="row">
