--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>I’m a Business Administration student specializing in Marketing at the University of Northern Colorado. I’m deeply interested in digital marketing, data-driven strategies, and optimizing user experiences. Currently, I’m enhancing my skills in web and digital analytics, where I enjoy transforming data into insights that drive smarter marketing decisions and improved user engagement.</title>
+  <title>A Few Words About Me</title>
   <meta name="description" content="This page is an overview of my professional and personal interests" >
   <meta name="keywords" content="your name, about me" > 
   <!-- Favicons -->
@@ -38,7 +38,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container d-flex justify-content-between align-items-center">
 
       <div id="logo">
-        <h1><a href="index.html">Your Name Here</a></h1> <!-- use this to place your name at the top left of the page THIS IS A TEST OF WEB VSTUDIO-->
+        <h1><a href="index.html">Britton Hladik</a></h1> <!-- use this to place your name at the top left of the page THIS IS A TEST OF WEB VSTUDIO-->
       </div>
 
       <nav id="navbar" class="navbar">
@@ -79,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">A Few Words About Me</h2>
             <p>
-             Describe yourself here.
+             I’m a Business Administration student specializing in Marketing at the University of Northern Colorado. I’m deeply interested in digital marketing, data-driven strategies, and optimizing user experiences. Currently, I’m enhancing my skills in web and digital analytics, where I enjoy transforming data into insights that drive smarter marketing decisions and improved user engagement.
             </p>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
