--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>A Few Words About Me</title>
+  <title>I’m a Business Administration student specializing in Marketing at the University of Northern Colorado. I’m deeply interested in digital marketing, data-driven strategies, and optimizing user experiences. Currently, I’m enhancing my skills in web and digital analytics, where I enjoy transforming data into insights that drive smarter marketing decisions and improved user engagement</title>
   <meta name="description" content="This page is an overview of my professional and personal interests" >
   <meta name="keywords" content="your name, about me" > 
   <!-- Favicons -->
@@ -79,25 +79,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">A Few Words About Me</h2>
             <p>
-             I’m a Business Administration student specializing in Marketing at the University of Northern Colorado. I’m deeply interested in digital marketing, data-driven strategies, and optimizing user experiences. Currently, I’m enhancing my skills in web and digital analytics, where I enjoy transforming data into insights that drive smarter marketing decisions and improved user engagement.
+             I’m a Business Administration student specializing in Marketing at the University of Northern Colorado. Currently, I’m enhancing my skills in web and digital analytics, where I enjoy transforming data into insights that drive smarter marketing decisions and improved user engagement.
             </p>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="">Interests 1</a></h4>
-              <p class="description">Write about interest 1 here</a></p>
+              <h4 class="title"><a href="">Digital Marketing</a></h4>
+              <p class="description">Digital Marketing is dynamic and impactful, allowing you to connect brands with the right audiences in meaningful ways.</a></p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Interests 2</a></h4>
-              <p class="description">Write about interest 2 here</p>
+              <h4 class="title"><a href="">Data Driven Strategies</a></h4>
+              <p class="description">Data-driven strategies is exciting because they bring precision to decision-making, transforming raw data into actionable insights.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
-              <h4 class="title"><a href="">Interests 3</a></h4>
-              <p class="description">Write about interest 3 here</p>
+              <h4 class="title"><a href="">Optimizing User Experiences</a></h4>
+              <p class="description">Optimizing user experience aligns with my goal of creating seamless, engaging interactions that enhance customer satisfaction and drive brand loyalty.</p>
             </div>
 
           </div>
