--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container d-flex justify-content-between align-items-center"> <!-- div tag defines a section in the HTML document--used as a container for HTML elements--can be styled with CSS -->
 
       <div id="logo">
-        <h1><a href="index.html">Britt Hladik</a></h1> <!-- use this to place your name at the top right of the page -->
+        <h1><a href="index.html">Britton Hladik</a></h1> <!-- use this to place your name at the top right of the page -->
       </div>
 
       <nav id="navbar" class="navbar"> <!-- this section provides nagitation links -->
@@ -55,7 +55,7 @@
   <section id="hero"> <!-- this section is formatting the top fold of the page and setting the background image with a call to hero-container class in CSS sheet -->
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Welcome to my website!</h1> <!-- Font style sizes etc are set in the hero section of the CSS sheet -->
-      <h2>Write about yourself here</h2>
+      <h2>I am I student at the University on Northern Colorado pursuing a Bachelor of Science with an emphasis in Marketing.</h2>
       <a href="about.html" class="btn-get-started">About me</a> <!-- this sets button font on the top fold -->
     </div>
   </section><!-- End Hero Section -->
