--- a/blog.html
+++ b/blog.html
@@ -97,7 +97,7 @@
         <div class="card">
           <h2>About Me</h2>
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/cat-favicon.png?raw=true" class="blogimg" style="height:300px;">
-          <p>Describe briefly who you are</p>
+          <p>I’m passionate about digital marketing and skilled in web and digital analytics, currently taking BAMK444, where I'm diving deep into data-driven strategies and tools like Google Tag Manager.</p>
         </div>
         <div class="card">
           <h3>Follow Me</h3>
