--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       <div class="container d-flex justify-content-between align-items-center">
   
         <div id="logo">
-          <h1><a href="index.html">Your Name here</a></h1> <!-- use this to place your name at the top left of the page -->
+          <h1><a href="index.html">Britton Hladik</a></h1> <!-- use this to place your name at the top left of the page -->
         </div>
   
         <nav id="navbar" class="navbar">
@@ -83,17 +83,17 @@
             <div class="info">
               <div>
                 <i class="bi bi-geo-alt"></i>
-                <p>501 20th St, Greeley, CO 80639</p>
+                <p>1758 6th Ave., Greeley, CO 80631</p>
               </div>
 
               <div>
                 <i class="bi bi-envelope"></i>
-                <p>your.name@bears.unco.edu</p>
+                <p>hlad5796@bears.unco.edu</p>
               </div>
 
               <div>
                 <i class="bi bi-phone"></i>
-                <p>999-999-9999</p>
+                <p>303-907-4506</p>
               </div>
             </div>
 
