--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p class="cta-text"> These are movies that I have found very interesting and entertaining. </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="blog.html">Click here to get the booklist</a>
+            <a class="cta-btn align-middle" href="blog.html">Click here to get the movie list</a>
           </div>
         </div>
 
