--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>I’m a Business Administration student specializing in Marketing at the University of Northern Colorado. I’m deeply interested in digital marketing, data-driven strategies, and optimizing user experiences. Currently, I’m enhancing my skills in web and digital analytics, where I enjoy transforming data into insights that drive smarter marketing decisions and improved user engagement</title>
+  <title> </title>
   <meta name="description" content="This page is an overview of my professional and personal interests" >
   <meta name="keywords" content="your name, about me" > 
   <!-- Favicons -->
@@ -78,26 +78,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">A Few Words About Me</h2>
-            <p>
-             I’m a Business Administration student specializing in Marketing at the University of Northern Colorado. Currently, I’m enhancing my skills in web and digital analytics, where I enjoy transforming data into insights that drive smarter marketing decisions and improved user engagement.
-            </p>
+            <p>I’m a senior at the University of Northern Colorado, pursuing a Bachelor’s degree in Business Administration with a concentration in Marketing. Growing up in Denver, Colorado, I was surrounded by the breathtaking beauty of the mountains, which sparked my love for the outdoors. From hiking to snowmobiling, I’ve always enjoyed exploring nature and staying active.
+I come from a close-knit family of five, with two amazing older sisters who’ve always inspired me. My competitive spirit was shaped by a childhood filled with sports—both playing and cheering on my favorite teams.Together, these elements highlight your passion, drive, and balance, giving a well-rounded picture of your values and personality.</p>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="">Digital Marketing</a></h4>
-              <p class="description">Digital Marketing is dynamic and impactful, allowing you to connect brands with the right audiences in meaningful ways.</a></p>
+              <h4 class="title"><a href="">Passion for Marketing and Creativity</a></h4>
+              <p class="description">My dedication to Business Administration with a concentration in Marketing highlights my professional focus. My passion for strategy, analytics, and user experiences speaks to my drive for impactful, creative work. This showcases my academic and career goals, making it a defining part of who I am.</a></p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Data Driven Strategies</a></h4>
-              <p class="description">Data-driven strategies is exciting because they bring precision to decision-making, transforming raw data into actionable insights.</p>
+              <h4 class="title"><a href="">Love for the Outdoors</a></h4>
+              <p class="description">Growing up in Denver and spending time hiking and snowmobiling reflects my adventurous spirit and love for nature. This not only shapes my personality but also shows my appreciation for balance and staying active, tying into my long-term goal of maintaining a healthy, active lifestyle.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
-              <h4 class="title"><a href="">Optimizing User Experiences</a></h4>
-              <p class="description">Optimizing user experience aligns with my goal of creating seamless, engaging interactions that enhance customer satisfaction and drive brand loyalty.</p>
+              <h4 class="title"><a href="">Competitive Spirit</a></h4>
+              <p class="description">My competitive nature, shaped by playing and watching sports, defines my determination and drive. This quality speaks volumes about my work ethic and commitment to achieving goals, both personally and professionally.</p>
             </div>
 
           </div>
