--- a/blog.html
+++ b/blog.html
@@ -68,27 +68,27 @@
 
     <!-- ======= Blog Section ======= -->
     <div class="header">
-      <h2>Mindset Marketing</h2>
+      <h2>Britton's Blueprint</h2>
     </div>
     
     <div class="row">
       <div class="leftcolumn">
         <div class="card">
-          <h2>Top 5 Recommended Consumer Psychology Books for Marketers</h2>
-          <h5>The books give great consumer psychology insights and are relevant to practitioners,</h5>
-          <p style="font-size:25px"> 1. Contagious by Jonah Berger</p>
-          <p><a href="https://www.amazon.com/Contagious-Things-Catch-Jonah-Berger/dp/1451686587">
+          <h2>Top 5 Recommended Movies</h2>
+          <h5>The movies are compelling, engaging, and riveting</h5>
+          <p style="font-size:25px"> 1. Insidious Directed by James Wan</p>
+          <p><a href="https://www.amazon.com/Insidious-Steelbook-UHD-Patrick-Wilson/dp/B0BYPCTJWH/ref=sr_1_1?crid=3RTB1HNJJ4GTX&dib=eyJ2IjoiMSJ9.Cx8HhPMLnYueUW886-gZSqXoA4jC6-50hkkTn3cnu8cnAq0iaXjjYhDrG9HHRC0RMz9hhPxA9kKoRwmjM2E9zPIL-AoXY0VR6sLS54QPEO17ehR4EY0-Qoow_O0-I5pKMopT6EPRBlMPiExAixNAq98cuJtHu7DVjaEKlSfRv63GyfKawr1KUHfPnmrbb7QQ4Ha9Ed_10etqg57uyzYMPhfK5jJdSaoWC0QJdc6ulF8.0zXkipJfbahCyouYBBOONYmzzQ5DEwmAF2zsqCkpPv0&dib_tag=se&keywords=insidious&qid=1732497033&sprefix=insidious%2Caps%2C238&sr=8-1">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 2. Don't Make Me Think by Steve Krug</p>
-          <p> <a href="https://www.amazon.com/Dont-Make-Think-Revisited-Usability/dp/0321965515/">
+          <p style="font-size:25px"> 2. Love, Rosie Directed by Christian Ditter</p>
+          <p> <a href="https://www.amazon.com/Love-Rosie-Cecelia-Ahern-ebook/dp/B000FCJZUO/ref=sr_1_1?crid=12WIW90BPNSBH&dib=eyJ2IjoiMSJ9.987f9ApO8wsnrQ4JHPDuu3QRfLYcWOoBGbtLhx1pcuAkAosJsK00o4_8MY9G6DJe_x3rJnjj010shuoUz43ueTvQ5MxxXE6ha3bAqF4U2zYz3pwaz_G7vS7cUbJZSnJicP_2SuHy5PUZhEkZaNHHSGy4D43HQh2xV2BdM8tf8tqBwjodN5L9n0A24ApMnv4myRi9AMWO70-ze3M-R-FOQF3C-X18yiaAIU_piGKCKsE.6oVndH1ihFg3pXwStprZTmR6LHBCvMs8YcAfNVEViT4&dib_tag=se&keywords=love%2C+rosie&qid=1732497237&sprefix=love%2C+rosie%2Caps%2C192&sr=8-1">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 3. Influence by Robert Cialdini</p>
-          <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
+          <p style="font-size:25px"> 3. War Dogs Directed by Todd Phillips</p>
+          <p><a href="https://www.amazon.com/War-Dogs-Blu-ray-Digital-HD/dp/B01LBWHOMM/ref=sr_1_1?crid=2E2UC48RELHPB&dib=eyJ2IjoiMSJ9.ugHnqOtOjGf6NyDGZS-n8CjaZC9QXbXUwc6UESnmnKGkb0BhlOze0UzR_Hf_ehGqAvaHQvGojpgU7vgtZ_RFQzwDbknM-yueL-q3MUlda0usWGrAjkpKc7lGjNmL2AXHWxOiYrpNDgavjS7WD0WiHIsLC1lpSdDIDXxfUxaRGFqVth6z2JhGv12kociAdlH15xLyjsYxGAJumtAk0X0ZnRDW-2IJcP-WDtQIb1Gc-wk.J6_Tr0fxLQInwdIj4K_BqBDVN1SuKTdX4npHTof2Es4&dib_tag=se&keywords=war+dogs&qid=1732497354&sprefix=war+dog%2Caps%2C241&sr=8-1">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 4. Predictably Irrational by Dan Ariely</p>
+          <p style="font-size:25px"> 4. Seven Directed by David Fincher</p>
           <p><a href="https://www.amazon.com/Predictably-Irrational-1-Exp-Rev/dp/B0076YEIFQ/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 5. Nudge by Richard Thaler and Cass Sunstein</p>
+          <p style="font-size:25px"> 5. Freedom Writers Directed by Richard LaGravenese</p>
           <p><a href="https://www.amazon.com/Nudge-Final-Richard-H-Thaler/dp/014313700X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
