--- a/blog.html
+++ b/blog.html
@@ -78,26 +78,26 @@
           <h5>The movies are compelling, engaging, and riveting</h5>
           <p style="font-size:25px"> 1. Insidious Directed by James Wan</p>
           <p><a href="https://www.amazon.com/Insidious-Steelbook-UHD-Patrick-Wilson/dp/B0BYPCTJWH/ref=sr_1_1?crid=3RTB1HNJJ4GTX&dib=eyJ2IjoiMSJ9.Cx8HhPMLnYueUW886-gZSqXoA4jC6-50hkkTn3cnu8cnAq0iaXjjYhDrG9HHRC0RMz9hhPxA9kKoRwmjM2E9zPIL-AoXY0VR6sLS54QPEO17ehR4EY0-Qoow_O0-I5pKMopT6EPRBlMPiExAixNAq98cuJtHu7DVjaEKlSfRv63GyfKawr1KUHfPnmrbb7QQ4Ha9Ed_10etqg57uyzYMPhfK5jJdSaoWC0QJdc6ulF8.0zXkipJfbahCyouYBBOONYmzzQ5DEwmAF2zsqCkpPv0&dib_tag=se&keywords=insidious&qid=1732497033&sprefix=insidious%2Caps%2C238&sr=8-1">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://th.bing.com/th/id/OIP.rEmiRy5NQFX4wi5JSCYz6gHaLH?rs=1&pid=ImgDetMain" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Love, Rosie Directed by Christian Ditter</p>
           <p> <a href="https://www.amazon.com/Love-Rosie-Cecelia-Ahern-ebook/dp/B000FCJZUO/ref=sr_1_1?crid=12WIW90BPNSBH&dib=eyJ2IjoiMSJ9.987f9ApO8wsnrQ4JHPDuu3QRfLYcWOoBGbtLhx1pcuAkAosJsK00o4_8MY9G6DJe_x3rJnjj010shuoUz43ueTvQ5MxxXE6ha3bAqF4U2zYz3pwaz_G7vS7cUbJZSnJicP_2SuHy5PUZhEkZaNHHSGy4D43HQh2xV2BdM8tf8tqBwjodN5L9n0A24ApMnv4myRi9AMWO70-ze3M-R-FOQF3C-X18yiaAIU_piGKCKsE.6oVndH1ihFg3pXwStprZTmR6LHBCvMs8YcAfNVEViT4&dib_tag=se&keywords=love%2C+rosie&qid=1732497237&sprefix=love%2C+rosie%2Caps%2C192&sr=8-1">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://th.bing.com/th/id/OIP.HHauf-pz2icpm7sYE4WbkgHaEK?w=294&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 3. War Dogs Directed by Todd Phillips</p>
           <p><a href="https://www.amazon.com/War-Dogs-Blu-ray-Digital-HD/dp/B01LBWHOMM/ref=sr_1_1?crid=2E2UC48RELHPB&dib=eyJ2IjoiMSJ9.ugHnqOtOjGf6NyDGZS-n8CjaZC9QXbXUwc6UESnmnKGkb0BhlOze0UzR_Hf_ehGqAvaHQvGojpgU7vgtZ_RFQzwDbknM-yueL-q3MUlda0usWGrAjkpKc7lGjNmL2AXHWxOiYrpNDgavjS7WD0WiHIsLC1lpSdDIDXxfUxaRGFqVth6z2JhGv12kociAdlH15xLyjsYxGAJumtAk0X0ZnRDW-2IJcP-WDtQIb1Gc-wk.J6_Tr0fxLQInwdIj4K_BqBDVN1SuKTdX4npHTof2Es4&dib_tag=se&keywords=war+dogs&qid=1732497354&sprefix=war+dog%2Caps%2C241&sr=8-1">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://th.bing.com/th/id/OIP.juQ7KtxXiWEVQLegk52whgHaLH?w=134&h=200&c=7&r=0&o=5&dpr=1.5&pid=1.7" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 4. Seven Directed by David Fincher</p>
-          <p><a href="https://www.amazon.com/Predictably-Irrational-1-Exp-Rev/dp/B0076YEIFQ/">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <p><a href="https://www.amazon.com/Seven-Brad-Pitt/dp/B004661J04/ref=sr_1_4?crid=Q2P492LQWQKM&dib=eyJ2IjoiMSJ9.mdKdpwsGYCfnwC5hSgSCgQpdU-L6JX40leXgytJKj6azt7QvFU7NXPcFPc7eXRA_00lJoQdYQeW5cjK1H885lQ0sX96ZRRnimPS2RWlTiKLTelUl1Logu7XUxyfo_mhvk_9vPJ87-jZ7DKHByAgiev6CX-JAiLv647hlCzHIA0MSjRUgwTeH-I5fttr5vQiwbBKQTpaqKvRa3RONWfcrd8lM2pnG-s-CdUGfav1UO3I.nEjLQ2zFKFL7Ng30hkSM9CFdEPlXz6B2Wc9AGPnnEgI&dib_tag=se&keywords=seven&qid=1732499722&sprefix=seven+%2Caps%2C262&sr=8-4">
+          <img src = "https://th.bing.com/th?id=OIP.D6s2JbHlgAnavH62djiYtAHaEK&w=333&h=187&c=8&rs=1&qlt=90&o=6&dpr=1.5&pid=3.1&rm=2" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. Freedom Writers Directed by Richard LaGravenese</p>
-          <p><a href="https://www.amazon.com/Nudge-Final-Richard-H-Thaler/dp/014313700X/">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <p><a href="https://www.amazon.com/Freedom-Writers-Will-Morales/dp/B008Q07MQ6/ref=sr_1_1?crid=1KKYKW1DYG9NE&dib=eyJ2IjoiMSJ9.VjUQhckfCvTh3b5FO6O5GJ2WXslx1e93w7pOQ7Fpc0Z210SdAerQtMPR3xPrXEgZFIw-Dpwbvl_yK9TMpv47uSkFzMoAo_DgMOpvC4e610DUH8iY0UPGwRl72FK9WXHG6UistWRRojYCDlsC9vNLkc5ih5RySCv9X4_HR-53JaKUtvWBjKipLcjjdDXp3gvFGwKx_Wvgt75L5QnOlXDObVd_VGkl-7zOnBbb1FiEs64.w5izwdOQU_u8tEgZmr7K04T0q05k7z6a4SbkAqRpfss&dib_tag=se&keywords=freedom+writers&qid=1732499767&s=instant-video&sprefix=freedom+writer%2Cinstant-video%2C158&sr=1-1">
+          <img src = "https://th.bing.com/th/id/OIP.IyZn-GiPrvvVp4F-GRvgpwHaLH?w=115&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
       </div>
       <div class="rightcolumn">
         <div class="card">
           <h2>About Me</h2>
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/cat-favicon.png?raw=true" class="blogimg" style="height:300px;">
-          <p>I’m passionate about digital marketing and skilled in web and digital analytics, currently taking BAMK444, where I'm diving deep into data-driven strategies and tools like Google Tag Manager.</p>
+          <p>As a marketing enthusiast, I’m passionate about creativity, strategy, and connecting with people in meaningful ways. Whether it’s diving into analytics, crafting campaigns, or optimizing user experiences, I’m driven to make an impact. Outside of academics and work, you can often find me enjoying the great outdoors, staying active, or catching the latest sports game.</p>
         </div>
         <div class="card">
           <h3>Follow Me</h3>
