--- a/video.html
+++ b/video.html
@@ -60,7 +60,7 @@
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">Video</a></li>
-            <li>MCB Video</li>
+            <li>Nature Video</li>
           </ol>
         </div>
       </div>
@@ -70,12 +70,12 @@
       <section id="mx">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h3 class="section-title">Monfort College of Business</h3>
-            <p class="section-description">Student at the Monfort College of Business - University of Northern Colorado</p>
+            <h3 class="section-title">Hanging Lake</h3>
+            <p class="section-description">My favorite hiking destination in Colorado - White River National Forest in Glenwood Canyon</p>
           </div>
           <div class="container" data-aos="fade-up">
             <iframe width="420" height="315"
-            src="https://www.youtube.com/embed/q-By3E_GF4k">
+            src="https://www.youtube.com/watch?v=4Xq3mxaQ_Ak">
             </iframe>
           </div>
         </div>
