--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head> <!-- contents of the head element are not displayed on the page. Instead it contains metadata about the page -->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WG7TB86B');</script>
+<!-- End Google Tag Manager -->
   <title>Britton Hladik</title>
   <meta name="description" content="description of your website here">
   <meta name="keywords" content="your seo keywords here" >
@@ -93,7 +99,10 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WG7TB86B"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
