--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keywords" content="your seo keywords here" >
 
   <!-- Favicons -->
-  <link href="assets/img/cat-favicon.png" rel="icon"> <!-- replaced original favicon with cat-->
+  <link href="https://files.oaiusercontent.com/file-A7wUubJotTc2KSFnkcC24i?se=2024-11-25T08%3A43%3A38Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D015e19e2-f609-4a52-8b93-1a8c1ebe9115.webp&sig=KB5lEitNMW35fd7UUaY79a3gffrltLV1qjvZK5bAXc0%3D" rel="icon"> <!-- replaced original favicon with cat-->
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> <!-- not sure what this one is for-->
 
   <!-- Google Fonts -->
