--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta name="description" content="This page is an overview of my professional and personal interests" >
   <meta name="keywords" content="your name, about me" > 
   <!-- Favicons -->
-  <link href="assets/img/cat-favicon.png" rel="icon">
+  <link href="https://i.pinimg.com/originals/2a/90/b8/2a90b88481bcfc2487ed3119e74a35c9.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
