--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
   <meta name="description" content="This page is an overview of my professional and personal interests" >
   <meta name="keywords" content="your name, about me" > 
   <!-- Favicons -->
-  <link href="https://i.pinimg.com/originals/2a/90/b8/2a90b88481bcfc2487ed3119e74a35c9.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://files.oaiusercontent.com/file-A7wUubJotTc2KSFnkcC24i?se=2024-11-25T09%3A02%3A32Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D015e19e2-f609-4a52-8b93-1a8c1ebe9115.webp&sig=rvJSMicNYjfZEtq4%2Bj1IvyGNxyXVaeBJWeebU8gQmo0%3D" rel="icon">
+  <link href="https://i.pinimg.com/originals/2a/90/b8/2a90b88481bcfc2487ed3119e74a35c9.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
