--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,8 @@
   <meta name="keywords" content="your name, blog" >
 
   <!-- Favicons -->
-  <link href="assets/img/cat-favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://images.search.yahoo.com/images/view;_ylt=Awr93EWwPERnfMwSyR2JzbkF;_ylu=c2VjA3NyBHNsawNpbWcEb2lkAzYwNGQ3YjQ1N2ZhNzZiNGQ5NzdjNTg3ZWRlMGE0Mzc4BGdwb3MDNwRpdANiaW5n?back=https%3A%2F%2Fimages.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Dcolorado%2Bsports%2Bteams%26type%3DE210US105G0%26fr%3Dmcafee%26fr2%3Dpiv-web%26tab%3Dorganic%26ri%3D7&w=1946&h=1154&imgurl=i0.wp.com%2Ftheverybesttop10.com%2Fwp-content%2Fuploads%2F2023%2F02%2FTop-10-Sports-Team-in-Colorado.jpg%3Fw%3D1946%26ssl%3D1&rurl=https%3A%2F%2Ftheverybesttop10.com%2Fsports-team-in-colorado%2F&size=247KB&p=colorado+sports+teams&oid=604d7b457fa76b4d977c587ede0a4378&fr2=piv-web&fr=mcafee&tt=Top+10+Sports+Team+in+Colorado&b=0&ni=21&no=7&ts=&tab=organic&sigr=4qvdB57GJxIY&sigb=3IV9WJDnQ2Fn&sigi=2bAQxsAUJNNC&sigt=enx83I0KLL9I&.crumb=8JwL36WK6sx&fr=mcafee&fr2=piv-web&type=E210US105G0" rel="icon">
+  <link href="https://files.oaiusercontent.com/file-A7wUubJotTc2KSFnkcC24i?se=2024-11-25T09%3A02%3A32Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D015e19e2-f609-4a52-8b93-1a8c1ebe9115.webp&sig=rvJSMicNYjfZEtq4%2Bj1IvyGNxyXVaeBJWeebU8gQmo0%3D" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
