--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="Daniel Brannon, blog" >
 
   <!-- Favicons -->
-  <link href="assets/img/cat-favicon.png" rel="icon">
+  <link href="https://files.oaiusercontent.com/file-A7wUubJotTc2KSFnkcC24i?se=2024-11-25T09%3A02%3A32Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D015e19e2-f609-4a52-8b93-1a8c1ebe9115.webp&sig=rvJSMicNYjfZEtq4%2Bj1IvyGNxyXVaeBJWeebU8gQmo0%3D" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
